Fixed Spacing

--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  max-width: 110.2rem;
+  max-width: 110rem;
   margin: 0 auto;
 }
 
